--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,4 +1,4 @@
-name: Go
+name: Go Windows Build
 
 on:
   push:
@@ -7,19 +7,22 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
-    runs-on: windows-latest  # 改为使用 Windows 环境
+    runs-on: windows-latest
+    
     steps:
     - uses: actions/checkout@v4
-
+    
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
         go-version: '1.20'
-
+    
+    - name: Initialize module
+      run: go mod init github.com/Mr-zhoulihuan/Mr-zhoulihuan
+    
     - name: Build
-      run: go build -v ./...
-
-    - name: Test
+      run: go build -v -o myapp.exe main.go  # 明确指定输入文件和输出名称
+    
+    - name: Test (if you have tests)
       run: go test -v ./...
